aligned sidebar first entry with title/breadcrumbs in main; global styles fix;adjusting font-size at guides page

--- a/src/components/pages/doc-page/doc-page-title-group/doc-page-title-group.module.scss
+++ b/src/components/pages/doc-page/doc-page-title-group/doc-page-title-group.module.scss
@@ -19,7 +19,7 @@
 .edit-link {
   position: absolute;
   right: -50px;
-  top: 25px;
+  bottom: 0;
   transform: translateX(100%);
   font-size: $font-size-xs;
   text-transform: uppercase;
