--- a/src/layouts/doc-layout/doc-layout.module.scss
+++ b/src/layouts/doc-layout/doc-layout.module.scss
@@ -5,7 +5,7 @@
 }
 
 .sidebar-header {
-  padding: 20px 20px 60px 20px;
+  padding: 20px 20px 28px 20px;
 }
 
 .sidebar {
